Security checkup. Fixed spacing problem.

--- a/css/oc_comment.css
+++ b/css/oc_comment.css
@@ -150,7 +150,7 @@ and open the template in the editor.
 {
     padding-top: 5px;
     font-size: 17px;
-    /*white-space: pre*/;
+    white-space: pre;
     line-height:115%;
    
 }
